--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "express": "^4.17.3",
     "express-handlebars": "^6.0.3",
     "express-session": "^1.17.2",
+    "method-override": "^3.0.0",
+    "moment": "^2.29.1",
     "mongoose": "^6.2.8",
     "morgan": "^1.10.0",
     "passport": "^0.5.2",
